--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
-server.port=8080
+#Data source
+#Indica el driver /lib para conectar java mysql
+spring.datasource.driver.class-name=com.mysql.jdbc.Driver
+
+#URL donde esta el servicio de mysql y el nombre de la base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/
+
+#Usuario y contraseña para tu base de datos de la linea de arriba
+spring.datasource.username=root
+spring.datasource.password=
+
+#[Opcional] Imprime en tu consola las insctrucciones hechas en tu base de datos
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=false
+
+#[Opcional] crea tablas
+spring.jpa.hibernate.ddl-auto=create
