--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 spring.datasource.driver.class-name=com.mysql.jdbc.Driver
 
 #URL donde esta el servicio de mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/
+spring.datasource.url=jdbc:mysql://localhost:3306/web_empleo
 
 #Usuario y contraseÃ±a para tu base de datos de la linea de arriba
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123root
 
 #[Opcional] Imprime en tu consola las insctrucciones hechas en tu base de datos
 spring.jpa.show-sql=true
