--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/web_empleo
 
 #Usuario y contraseÃ±a para tu base de datos de la linea de arriba
 spring.datasource.username=root
-spring.datasource.password=123root
+spring.datasource.password=rout
 
 #[Opcional] Imprime en tu consola las insctrucciones hechas en tu base de datos
 spring.jpa.show-sql=true
